# auto_browser

./: .env.example  .gitignore  App.js  README.md  pyproject.toml  report.md  requirements.txt
src/auto_browser/: crew.py  main.py
src/auto_browser/agents/: form_agents.py
src/auto_browser/config/: agents.yaml  tasks.yaml
src/auto_browser/data/: form_data.json
src/auto_browser/tools/: form_tools.py
