[project]
name = "auto_browser"
version = "0.1.0"
description = "auto_browser using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
auto_browser = "auto_browser.main:run"
run_crew = "auto_browser.main:run"
train = "auto_browser.main:train"
replay = "auto_browser.main:replay"
test = "auto_browser.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
